// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tablerow #insertSelectionConfiguration should NOT insert selection column when selection callback is NOT provided 1`] = `
Array [
  <Content
    cellRenderer={[Function]}
    dataKey="id"
    label="Id"
    width={50}
/>,
  <Content
    cellRenderer={[Function]}
    dataKey="name"
    label="Name"
    width={350}
/>,
]
`;

exports[`tablerow #insertSelectionConfiguration should insert selection column when selection callback is provided 1`] = `
Array [
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    columnData={
        Object {
            "label": "Select this element",
            "onChange": [Function],
          }
    }
    dataKey=""
    defaultSortDirection="ASC"
    disableSort={true}
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    id="tc-list-internal-row-selector"
    label=""
    style={Object {}}
    width={35}
/>,
  <Content
    cellRenderer={[Function]}
    dataKey="id"
    label="Id"
    width={50}
/>,
  <Content
    cellRenderer={[Function]}
    dataKey="name"
    label="Name"
    width={350}
/>,
]
`;

exports[`tablerow #toColumns should add id in columns data 1`] = `
Array [
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-id"
    columnData={
        Object {
            "custom": "lol",
            "id": "my-id",
          }
    }
    dataKey="id"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-id"
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
/>,
]
`;

exports[`tablerow #toColumns should create column with enhanced classname from theme 1`] = `
Array [
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="my-classname theme-classname tc-list-cell-id"
    columnData={
        Object {
            "id": undefined,
          }
    }
    dataKey="id"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerClassName="tc-list-cell-id"
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
/>,
]
`;

exports[`tablerow #toColumns should create column with enhanced header classname from theme 1`] = `
Array [
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="tc-list-cell-id"
    columnData={
        Object {
            "id": undefined,
          }
    }
    dataKey="id"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerClassName="my-header-classname theme-header-classname tc-list-cell-id"
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
/>,
]
`;
